# datanorm-python

./: .coveragerc  .flake8  LICENSE  Makefile  Readme.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi.yml  python-app.yml
datanorm/: __init__.py  datanorm_files.py  datanorm_item.py
tests/: datanorm_2_test.001  datanorm_test.001  datanorm_test.WRG  datpreis_test.001  test_datanorm_files.py  test_datanorm_item.py
