[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-datanorm-import"
version = "0.0.2"
authors = [
  { name="Johannes Fahr", email="johannes.fahr@posteo.de" },
]
description = "A Collection of parser classes to handle DATANORM files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

#[project.urls]
#Homepage = "https://github.com/FahrJo/datanorm"
#Issues = "https://github.com/FahrJo/datanorm/issues"

[project.entry-points."inventree_plugins"]
inventree-datanorm-import = "inventree_datanorm_import.datanorm_barcode_plugin:DatanormBarcodePlugin"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["DATANORM_files*"]